--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^3.10.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "dotenv": "^16.0.3",
+    "emailjs": "^4.0.1",
     "flowbite": "^1.6.3",
     "flowbite-react": "^0.3.8",
     "npm": "^9.4.2",
